concord_examples/tests/ui/missing_placeholder_type.stderr
error: expected `:`
 --> tests/ui/missing_placeholder_type.rs:8:15
  |
8 |     GET One(id)
  |               ^
